[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/triangle_polygon_shape.gd" type="Script" id=1]
[ext_resource path="res://game_objects/blocks/block.gd" type="Script" id=2]
[ext_resource path="res://textures/blocks/block-1-1.png" type="Texture" id=3]

[node name="Block" type="KinematicBody2D"]
z_index = 2
input_pickable = true
script = ExtResource( 2 )
border_color = Color( 0.360784, 0.360784, 0.360784, 1 )
border_color_hovered = Color( 0.588235, 0.65098, 0.729412, 1 )
moving_speed = 8

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -135.557 )
z_index = -1
texture = ExtResource( 3 )
centered = false

[node name="TrianglePolygonShape" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 81, -139, 161, 0 )
script = ExtResource( 1 )
enabled = true

[node name="Boundary" type="Node2D" parent="."]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="draw" from="Boundary" to="." method="_on_Boundary_draw"]
